--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,9 @@ body {
 .photo {
   position: relative;
   object-fit:cover;
-  margin: 1rem;
-  width: 15em;
-  height: 15em;
+  margin: 1rem auto 2rem auto;
+  width: 15rem;
+  height: 15rem;
   border-radius: 50%;
 }
 
@@ -213,13 +213,695 @@ main {
   margin: 0.5rem;
 }
 
-
 .technos_icon {
-  margin-top: 1.2rem;
+  margin: 1.2rem -3rem 0rem -1rem;
+}
+
+.icon {
+  height: 3.7rem;
 }
 
 footer {
   text-align: right;
   padding: 1.5rem 0rem 0rem !important;
   margin: 0rem !important;
+}
+
+
+/* **********  ----- Ajustement Ecrans avec media-query ----- ********** */
+
+@media all and (min-width: 960px) and (max-width: 1050px) {
+  #left_side {
+    position: relative;
+    background: #01496a;
+    padding: 2rem 1.2rem 3rem 1.2rem;
+ 
+  }
+
+  .photo {
+    position: relative;
+    object-fit:cover;
+    margin: 1rem auto 0rem auto;
+    width: 14rem;
+    height: 14rem;
+    border-radius: 50%;
+  }
+
+  h1 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    font-size: 1.6rem;
+    margin-top: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 900;
+    line-height: 1.8rem;
+  
+  }
+
+  .technos_icon {
+    margin: 1.2rem -2rem -2rem -1rem
+  } 
+
+  .icon {
+    height: 3.1rem;
+  }
+
+}
+
+@media all and (min-width: 800px) and (max-width: 959px) {
+
+  #left_side {
+    position: relative;
+    background: #01496a;
+    padding: 2rem 1.2rem 3rem 1.2rem;
+    margin-left: -3.5rem;
+  }
+
+  .photo {
+    position: relative;
+    object-fit:cover;
+    margin: 1rem auto 0rem auto;
+    width: 13rem;
+    height: 13rem;
+    border-radius: 50%;
+  }
+
+  h1 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    font-size: 1.6rem;
+    margin-top: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 900;
+    line-height: 1.8rem;
+  
+  }
+
+  #right_side {
+    position: relative;
+    background-color: #fff;
+    padding: 0rem 1rem 0rem 1.6rem;
+    margin-right: -3rem;
+  }
+
+
+
+  .technos_icon {
+    margin: 1.2rem -2rem -2rem -1.5rem;
+  } 
+
+  .icon {
+    height: 2.9rem;
+  }
+
+}
+
+@media all and (min-width: 700px) and (max-width: 799px) {
+
+  #left_side {
+    position: relative;
+    background: #01496a;
+    padding: 2rem 0.5rem 3rem 0.5rem;
+    margin-left: -4.5rem;
+  }
+
+  .photo {
+    position: relative;
+    object-fit:cover;
+    margin: 1rem auto 0rem auto;
+    width: 13rem;
+    height: 13rem;
+    border-radius: 50%;
+  }
+
+  h1 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    font-size: 1.6rem;
+    margin-top: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 900;
+    line-height: 1.8rem;
+  }
+
+  .paintball {
+    margin-top: 1rem;
+  }
+
+  #right_side {
+    position: relative;
+    background-color: #fff;
+    padding: 0rem 1rem 0rem 1.6rem;
+    margin-right: -4.5rem;
+  }
+
+  #exp {
+    margin-top: -1.5rem;
+    margin-bottom: -1.5rem;
+  }
+
+  h3 {
+    margin-bottom: -0.5rem;
+  }
+
+  .technos_icon {
+    margin: 1.2rem -2rem -0.5rem -1.5rem;
+  } 
+
+  .icon {
+    height: 2.7rem;
+  }
+
+}
+
+@media all and (min-width: 600px) and (max-width: 699px) {
+
+  #left_side {
+    position: relative;
+    background: #01496a;
+    padding: 2rem 0.5rem 3rem 0.5rem;
+    margin-left: -5rem;
+  }
+
+  .photo {
+    position: relative;
+    object-fit:cover;
+    margin: 1rem auto 0rem auto;
+    width: 12rem;
+    height: 12rem;
+    border-radius: 50%;
+  }
+
+  h1 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    font-size: 1.8rem;
+    margin-top: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 900;
+    line-height: 1.8rem;
+  
+  }
+
+  .info_icon {
+    width: 1.3rem;
+    height: 1.3rem;
+    margin: 0.2rem 0rem 0rem 0rem;
+  }
+
+  #contact {
+    position: relative;
+    padding-top: 2rem;
+    font-size: 1rem;
+    color: #fff;
+    line-height: 1.4rem;
+  }
+
+  #right_side {
+    position: relative;
+    background-color: #fff;
+    padding: 0rem 1rem 0rem 1rem;
+    margin-right: -5.6rem;
+  }
+
+  #exp {
+    margin-top: -1.5rem;
+    margin-bottom: -1.5rem;
+  }
+
+  h3 {
+    margin-bottom: -0.5rem;
+  }
+
+  h5 {
+    font-size: 1rem;
+  }
+
+  .technos_icon {
+    margin: 1.2rem -2rem -0.5rem -0.5rem;
+  } 
+
+  .icon {
+    height: 2.2rem;
+  }
+
+  footer {
+    text-align: right;
+    padding: 2.5rem 0rem 0rem !important;
+    margin: 0rem !important;
+  }
+  
+}
+
+
+@media all and (min-width: 500px) and (max-width: 599px) {
+
+  #left_side {
+    position: relative;
+    background: #01496a;
+    padding: 2rem 0.5rem 3rem 1.5rem;
+    margin-left: -4rem;
+  }
+
+  .photo {
+    position: relative;
+    object-fit:cover;
+    margin: 1rem auto 0rem auto;
+    width: 12rem;
+    height: 12rem;
+    border-radius: 50%;
+  }
+
+  h1 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    font-size: 1.8rem;
+    margin-top: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 900;
+    line-height: 1.8rem;
+  
+  }
+
+  .info_icon {
+    width: 1.3rem;
+    height: 1.3rem;
+    margin: 0.2rem 0rem 0rem 0rem;
+  }
+
+  #contact {
+    position: relative;
+    padding-top: 2rem;
+    font-size: 1rem;
+    color: #fff;
+    line-height: 1.4rem;
+  }
+
+  .formation {
+    font-size: 0.9rem;
+  }
+
+  #right_side {
+    position: relative;
+    background-color: #fff;
+    padding: 0rem 1rem 0rem 1rem;
+    margin-right: -5.6rem;
+  }
+
+  .profil_p {
+    color: #333;
+    line-height: 1.1rem;
+    font-size: 0.9rem;
+    padding-bottom: 1rem;
+  }
+  
+  #competences {
+    padding-bottom: 1rem;
+  }
+  
+  .comp_p {
+    color: #333;
+    line-height: 1.1rem;
+    font-size: 0.9rem;
+    padding: 0.5rem 0.5rem 0rem 0rem;
+  }
+  
+  .exp_h4 {
+    padding: 0.5rem 0rem 0rem 1.2rem;
+    font-weight: 500; 
+  }
+  
+  .exp_p {
+    color: #333;
+    line-height: 1.1rem;
+    font-size: 0.9rem;
+    padding: 0.5rem 0.5rem 0rem 2rem;
+  }
+  
+  .soft_skills {
+    color: #333;
+    font-weight: 500;
+    margin: 0.5rem;
+    margin-left: -0.5rem;
+    font-size: 0.9rem;
+  }
+  
+
+  #exp {
+    margin-top: -1.5rem;
+    margin-bottom: -1.5rem;
+  }
+
+  h3 {
+    margin-bottom: -0.5rem;
+  }
+
+  h5 {
+    font-size: 1rem;
+  }
+
+  .technos_icon {
+    margin: 1.2rem 0rem -0.5rem -0.5rem;
+  } 
+
+  .icon {
+    height: 1.5rem;
+  }
+
+  footer {
+    text-align: right;
+    padding: 2.5rem 0rem 0rem !important;
+    margin: 0rem !important;
+  }
+  
+}
+
+
+@media all and (min-width: 400px) and (max-width: 499px) {
+
+  #left_side {
+    position: relative;
+    background: #01496a;
+    padding: 2rem 0.5rem 3rem 0.5rem;
+    margin-left: -7rem;
+    margin-right: -2rem;
+  }
+
+  .photo {
+    position: relative;
+    object-fit:cover;
+    margin: 1rem auto 0rem auto;
+    width: 8rem;
+    height: 8rem;
+    border-radius: 50%;
+  }
+
+  h1 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    font-size: 1.6rem;
+    margin-top: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 900;
+    line-height: 1.8rem;
+  
+  }
+
+  .metier {
+    position: relative;
+    padding-top: 2rem;
+    color: #fff;
+    line-height: 1.4rem;
+    font-weight: 600;
+    font-size: 0.9rem;
+  
+  }
+
+  .info_icon {
+    width: 0.9rem;
+    height: 0.9rem;
+    margin: 0rem 0rem 0rem -0.2rem;
+  }
+
+  .liens {
+    color: #fff;
+    text-decoration: none;
+    font-size: 0.85rem;
+  }
+
+  #contact {
+    position: relative;
+    padding-top: 2rem;
+    margin-left: 1.6rem;
+    font-size: 0.9rem;
+    color: #fff;
+    line-height: 1.4rem;
+  }
+
+  #formation {
+    margin-left: 1.5rem;
+    font-size: 0.9rem;
+  }
+
+  .formation {
+    font-size: 0.8rem;
+    margin-left: -0.5rem;
+  }
+
+  #loisir {
+    margin-left: 1.5rem;
+  }
+
+  #right_side {
+    position: relative;
+    background-color: #fff;
+    padding: 0rem 1rem 0rem 0.1rem;
+    margin-right: -5.6rem;
+    margin-left: -0.1rem;
+  }
+
+  .profil_p {
+    color: #333;
+    line-height: 1rem;
+    font-size: 0.85rem;
+    padding-bottom: 1rem;
+  }
+  
+  #competences {
+    padding-bottom: 1rem;
+  }
+  
+  .comp_p {
+    color: #333;
+    line-height: 1rem;
+    font-size: 0.85rem;
+    padding: 0.5rem 0.5rem 0rem 0rem;
+  }
+  
+  .exp_h4 {
+    padding: 0.5rem 0rem 0rem 1.2rem;
+    font-weight: 500; 
+  }
+  
+  .exp_p {
+    color: #333;
+    line-height: 1rem;
+    font-size: 0.8rem;
+    padding: 0.5rem 0.5rem 0rem 2rem;
+  }
+  
+  .soft_skills {
+    color: #333;
+    font-weight: 500;
+    margin: 0.5rem;
+    margin-left: -0.1rem;
+    font-size: 0.85rem;
+  }
+  
+
+  #exp {
+    margin-top: -1.5rem;
+    margin-bottom: -1.5rem;
+  }
+
+  h3 {
+    margin-bottom: -0.5rem;
+    font-size: 1.3rem;
+    }
+
+  h5 {
+    font-size: 1rem;
+  }
+
+  .technos_icon {
+    margin: 1.2rem 0rem -0.5rem -0.5rem;
+  } 
+
+  .icon {
+    height: 1.2rem;
+  }
+
+  footer {
+    text-align: right;
+    padding: 2.5rem 0rem 0rem !important;
+    margin: 0rem !important;
+  }
+  
+}
+
+@media all and (min-width: 200px) and (max-width: 399px) {
+
+  #left_side {
+    position: relative;
+    background: #01496a;
+    padding: 2rem 0.5rem 3rem 0.5rem;
+    margin-left: -7rem;
+    margin-right: -2rem;
+  }
+
+  .photo {
+    position: relative;
+    object-fit:cover;
+    margin: 1rem auto 0rem auto;
+    width: 7rem;
+    height: 7rem;
+    border-radius: 50%;
+  }
+
+  h1 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    font-size: 1.4rem;
+    margin-top: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 900;
+    line-height: 1.8rem;
+  
+  }
+
+  .metier {
+    position: relative;
+    padding-top: 2rem;
+    color: #fff;
+    line-height: 1.3rem;
+    font-weight: 600;
+    font-size: 0.75rem;
+  
+  }
+
+  .info_icon {
+    width: 0.75rem;
+    height: 0.75rem;
+    margin: 0rem 0rem 0rem -0.2rem;
+  }
+
+  .liens {
+    color: #fff;
+    text-decoration: none;
+    font-size: 0.7rem;
+  }
+
+  #contact {
+    position: relative;
+    padding-top: 2rem;
+    margin-left: 1.6rem;
+    font-size: 0.75rem;
+    color: #fff;
+    line-height: 1.4rem;
+  }
+
+  #formation {
+    margin-left: 1.5rem;
+    font-size: 0.75rem;
+  }
+
+  .formation {
+    font-size: 0.6rem;
+    margin-left: -1rem;
+  }
+
+  #loisir {
+    margin-left: 1.5rem;
+  }
+
+  .paintball {
+    font-size: 0.8rem;
+  }
+
+  #right_side {
+    position: relative;
+    background-color: #fff;
+    padding: 0rem 1rem 0rem 0.1rem;
+    margin-right: -5.6rem;
+    margin-left: -0.1rem;
+  }
+
+  .profil_p {
+    color: #333;
+    line-height: 1rem;
+    font-size: 0.7rem;
+    padding-bottom: 1rem;
+  }
+  
+  #competences {
+    padding-bottom: 1rem;
+  }
+  
+  .comp_p {
+    color: #333;
+    line-height: 1rem;
+    font-size: 0.7rem;
+    padding: 0.5rem 0.5rem 0rem 0rem;
+  }
+  
+  .exp_h4 {
+    padding: 0.5rem 0rem 0rem 1.2rem;
+    font-weight: 500; 
+  }
+  
+  .exp_p {
+    color: #333;
+    line-height: 1rem;
+    font-size: 0.7rem;
+    padding: 0.5rem 0.5rem 0rem 2rem;
+  }
+  
+  .soft_skills {
+    color: #333;
+    font-weight: 500;
+    margin: 0.5rem;
+    margin-left: -0.1rem;
+    font-size: 0.7rem;
+  }
+  
+
+  #exp {
+    margin-top: -1.5rem;
+    margin-bottom: -1.5rem;
+  }
+
+  h3 {
+    margin-bottom: -0.5rem;
+    font-size: 1.1rem;
+    }
+
+  h5 {
+    font-size: 0.9rem;
+  }
+
+  .technos_icon {
+    margin: 1.2rem 0rem -0.5rem -0.2rem;
+  } 
+
+  .icon {
+    height: 1.2rem;
+  }
+
+  footer {
+    text-align: right;
+    padding: 2.5rem 0rem 0rem !important;
+    margin: 0rem !important;
+  }
+  
 }
