--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ main {
 footer {
   text-align: right;
   padding: 1.5rem 0rem 0rem !important;
-  margin: 0rem !important;
+  margin: 0rem -2.5rem 0rem 0rem!important;
 }
 
 
@@ -268,6 +268,13 @@ footer {
   .icon {
     height: 3.1rem;
   }
+
+  footer {
+    text-align: right;
+    padding: 1.5rem 0rem 0rem !important;
+    margin: 0rem -1.5rem 0rem 0rem!important;
+  }
+  
 
 }
 
@@ -319,6 +326,13 @@ footer {
   .icon {
     height: 2.9rem;
   }
+
+  footer {
+    text-align: right;
+    padding: 1.5rem 0rem 0rem !important;
+    margin: 0rem -0.5rem 0rem 0rem!important;
+  }
+  
 
 }
 
@@ -381,6 +395,13 @@ footer {
     height: 2.7rem;
   }
 
+  footer {
+    text-align: right;
+    padding: 1.5rem 0rem 0rem !important;
+    margin: 1.5rem -0.5rem 0rem 0rem!important;
+  }
+  
+
 }
 
 @media all and (min-width: 600px) and (max-width: 699px) {
@@ -396,8 +417,8 @@ footer {
     position: relative;
     object-fit:cover;
     margin: 1rem auto 0rem auto;
-    width: 12rem;
-    height: 12rem;
+    width: 12.5rem;
+    height: 12.5rem;
     border-radius: 50%;
   }
 
@@ -472,7 +493,7 @@ footer {
     position: relative;
     background: #01496a;
     padding: 2rem 0.5rem 3rem 1.5rem;
-    margin-left: -4rem;
+    margin-left: -5.5rem;
   }
 
   .photo {
@@ -495,7 +516,6 @@ footer {
     text-align: center;
     font-weight: 900;
     line-height: 1.8rem;
-  
   }
 
   .info_icon {
@@ -550,7 +570,8 @@ footer {
     color: #333;
     line-height: 1.1rem;
     font-size: 0.9rem;
-    padding: 0.5rem 0.5rem 0rem 2rem;
+    padding: 0.5rem 0.5rem 0rem -0.5rem;
+    margin-left: -2rem;
   }
   
   .soft_skills {
@@ -569,6 +590,7 @@ footer {
 
   h3 {
     margin-bottom: -0.5rem;
+    font-size: 1.3rem;
   }
 
   h5 {
@@ -581,6 +603,9 @@ footer {
 
   .icon {
     height: 1.5rem;
+  }
+  .paintball {
+    font-size: 0.9rem;
   }
 
   footer {
@@ -606,8 +631,8 @@ footer {
     position: relative;
     object-fit:cover;
     margin: 1rem auto 0rem auto;
-    width: 8rem;
-    height: 8rem;
+    width: 9rem;
+    height: 9rem;
     border-radius: 50%;
   }
 
@@ -681,7 +706,7 @@ footer {
   .profil_p {
     color: #333;
     line-height: 1rem;
-    font-size: 0.85rem;
+    font-size: 0.8rem;
     padding-bottom: 1rem;
   }
   
@@ -692,7 +717,7 @@ footer {
   .comp_p {
     color: #333;
     line-height: 1rem;
-    font-size: 0.85rem;
+    font-size: 0.8rem;
     padding: 0.5rem 0.5rem 0rem 0rem;
   }
   
@@ -713,7 +738,7 @@ footer {
     font-weight: 500;
     margin: 0.5rem;
     margin-left: -0.1rem;
-    font-size: 0.85rem;
+    font-size: 0.8rem;
   }
   
 
@@ -725,6 +750,7 @@ footer {
   h3 {
     margin-bottom: -0.5rem;
     font-size: 1.3rem;
+    margin-top: -1rem;
     }
 
   h5 {
@@ -732,11 +758,11 @@ footer {
   }
 
   .technos_icon {
-    margin: 1.2rem 0rem -0.5rem -0.5rem;
+    margin: 1.2rem 0rem -0.5rem 0rem;
   } 
 
   .icon {
-    height: 1.2rem;
+    height: 1.3rem;
   }
 
   footer {
@@ -744,10 +770,13 @@ footer {
     padding: 2.5rem 0rem 0rem !important;
     margin: 0rem !important;
   }
-  
+
+  .paintball {
+    font-size: 0.8rem;
+  }
 }
 
-@media all and (min-width: 200px) and (max-width: 399px) {
+@media all and (min-width: 360px) and (max-width: 399px) {
 
   #left_side {
     position: relative;
@@ -771,7 +800,7 @@ footer {
     display: flex;
     flex-direction: column;
     color: #fff;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     margin-top: 3rem;
     text-transform: uppercase;
     text-align: center;
@@ -839,9 +868,9 @@ footer {
 
   .profil_p {
     color: #333;
-    line-height: 1rem;
-    font-size: 0.7rem;
-    padding-bottom: 1rem;
+    line-height: 0.9rem;
+    font-size: 0.67rem;
+    padding-bottom: 0.8rem;
   }
   
   #competences {
@@ -850,8 +879,8 @@ footer {
   
   .comp_p {
     color: #333;
-    line-height: 1rem;
-    font-size: 0.7rem;
+    line-height: 0.9rem;
+    font-size: 0.67rem;
     padding: 0.5rem 0.5rem 0rem 0rem;
   }
   
@@ -862,8 +891,8 @@ footer {
   
   .exp_p {
     color: #333;
-    line-height: 1rem;
-    font-size: 0.7rem;
+    line-height: 0.9rem;
+    font-size: 0.67rem;
     padding: 0.5rem 0.5rem 0rem 2rem;
   }
   
@@ -872,7 +901,7 @@ footer {
     font-weight: 500;
     margin: 0.5rem;
     margin-left: -0.1rem;
-    font-size: 0.7rem;
+    font-size: 0.67rem;
   }
   
 
@@ -882,12 +911,18 @@ footer {
   }
 
   h3 {
+    margin-top: -1rem;
     margin-bottom: -0.5rem;
     font-size: 1.1rem;
     }
 
-  h5 {
+  .exp_h4 {
     font-size: 0.9rem;
+  }
+
+  h5 {
+    font-size: 0.65rem;
+    margin-left: 0.2rem;
   }
 
   .technos_icon {
@@ -896,6 +931,171 @@ footer {
 
   .icon {
     height: 1.2rem;
+  }
+
+  footer {
+    text-align: right;
+    padding: 2.5rem 0rem 0rem !important;
+    margin: 0rem !important;
+  }
+  
+}
+
+@media all and (min-width: 200px) and (max-width: 359px) {
+
+  #left_side {
+    position: relative;
+    background: #01496a;
+    padding: 2rem 0.5rem 3rem 0.5rem;
+    margin-left: -7rem;
+    margin-right: -2rem;
+  }
+
+  .photo {
+    position: relative;
+    object-fit:cover;
+    margin: 1rem auto 0rem auto;
+    width: 7rem;
+    height: 7rem;
+    border-radius: 50%;
+  }
+
+  h1 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    color: #fff;
+    font-size: 1.5rem;
+    margin-top: 3rem;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 900;
+    line-height: 1.8rem;
+  
+  }
+
+  .metier {
+    position: relative;
+    padding-top: 2rem;
+    color: #fff;
+    line-height: 1.3rem;
+    font-weight: 600;
+    font-size: 0.75rem;
+  
+  }
+
+  .info_icon {
+    width: 0.75rem;
+    height: 0.75rem;
+    margin: 0rem 0rem 0rem -0.2rem;
+  }
+
+  .liens {
+    color: #fff;
+    text-decoration: none;
+    font-size: 0.7rem;
+  }
+
+  #contact {
+    position: relative;
+    padding-top: 2rem;
+    margin-left: 1.6rem;
+    font-size: 0.75rem;
+    color: #fff;
+    line-height: 1.4rem;
+  }
+
+  #formation {
+    margin-left: 1.5rem;
+    font-size: 0.75rem;
+  }
+
+  .formation {
+    font-size: 0.6rem;
+    margin-left: -1rem;
+  }
+
+  #loisir {
+    margin-left: 1.5rem;
+  }
+
+  .paintball {
+    font-size: 0.8rem;
+  }
+
+  #right_side {
+    position: relative;
+    background-color: #fff;
+    padding: 0rem 1rem 0rem 0.1rem;
+    margin-right: -5.6rem;
+    margin-left: -0.1rem;
+  }
+
+  .profil_p {
+    color: #333;
+    line-height: 0.9rem;
+    font-size: 0.67rem;
+    padding-bottom: 0.8rem;
+  }
+  
+  #competences {
+    padding-bottom: 1rem;
+  }
+  
+  .comp_p {
+    color: #333;
+    line-height: 0.9rem;
+    font-size: 0.67rem;
+    padding: 0.5rem 0.5rem 0rem 0rem;
+  }
+  
+  .exp_h4 {
+    padding: 0.5rem 0rem 0rem 1.2rem;
+    font-weight: 500; 
+  }
+  
+  .exp_p {
+    color: #333;
+    line-height: 0.9rem;
+    font-size: 0.67rem;
+    padding: 0.5rem 0.5rem 0rem 2rem;
+  }
+  
+  .soft_skills {
+    color: #333;
+    font-weight: 500;
+    margin: 0.5rem;
+    margin-left: -0.1rem;
+    font-size: 0.67rem;
+  }
+  
+
+  #exp {
+    margin-top: -1.5rem;
+    margin-bottom: -1.5rem;
+  }
+
+  h3 {
+    margin-top: -1rem;
+    margin-bottom: -0.5rem;
+    font-size: 1.1rem;
+    }
+
+  .exp_h4 {
+    font-size: 0.9rem;
+  }
+
+  h5 {
+    font-size: 0.65rem;
+    margin-left: 0.2rem;
+  }
+
+  .technos_icon {
+    margin: 1.2rem 0rem -0.5rem -0.2rem;
+  } 
+
+  .icon {
+    height: 0.9rem;
   }
 
   footer {
